fix jumpTo position

--- a/src/getonboard.scss
+++ b/src/getonboard.scss
@@ -51,7 +51,7 @@ html, .mode_3d #game_play_area_background {
 
   #jump-controls {
     position: fixed;
-    top: 180px;
+    top: 50vh;
 
     .jump-link {
       position: relative;
